<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bphilip.botree.ui.meditation.MeditationFragment"
        android:label="@string/title_meditation"
        tools:layout="@layout/fragment_meditation" >
        <action
            android:id="@+id/navigation_dashboard"
            app:destination="@id/navigation_reflection"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_right"
            app:popEnterAnim="@anim/anim_slide_in_right"
            app:popExitAnim="@anim/anim_slide_out_right"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reflection"
        android:name="com.bphilip.botree.ui.reflections.ReflectionsFragment"
        android:label="@string/title_reflections"
        tools:layout="@layout/fragment_reflections" >
        <action
            android:id="@+id/navigation_settings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/navigation_home"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/nav_default_exit_anim"
            app:exitAnim="@anim/nav_default_enter_anim"
            app:popEnterAnim="@anim/nav_default_exit_anim"
            app:popExitAnim="@anim/nav_default_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.bphilip.botree.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/navigation_reflection"
            app:destination="@id/navigation_reflection"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_right"
            app:popEnterAnim="@anim/anim_slide_in_right"
            app:popExitAnim="@anim/anim_slide_out_right" />
    </fragment>
</navigation>