<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/time_meditation"
        android:layout_width="230dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="88sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/minutesDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutesUp"
        tools:text="09:00" />

    <ImageButton
        android:id="@+id/minutesUp"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:adjustViewBounds="false"
        android:background="@drawable/button_background"
        android:contentDescription="@string/up_arrow"
        android:scaleType="center"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_up" />

    <ImageButton
        android:id="@+id/secondsUp"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/up_arrow"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="@+id/minutesUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_up" />

    <ImageButton
        android:id="@+id/secondsDown"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/down_arrow"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/minutesDown"
        app:srcCompat="@drawable/ic_keyboard_arrow_down" />

    <ImageButton
        android:id="@+id/minutesDown"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/down_arrow"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_keyboard_arrow_down" />

    <ImageButton
        android:id="@+id/timerStart"
        android:layout_width="45dp"
        android:layout_height="109dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_background_inverse"
        android:contentDescription="@string/timer_start"
        android:onClick="startTimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_forward_white_48dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_meditation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/big_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_previous_descriptor"
        tools:listitem="@layout/recyclerview_meditations" />

    <TextView
        android:id="@+id/text_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_average_descriptor"
        tools:text="09:00" />

    <TextView
        android:id="@+id/text_average_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/average_time_meditated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table"
        tools:text="@string/average_time_meditated" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:stretchColumns="*"
        app:layout_constraintTop_toBottomOf="@+id/secondsDown">

        <TableRow
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="18dip"
                android:textColor="#fff"
                android:gravity="center"
                android:layout_weight="1"/>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/text_previous_descriptor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/this_weeks_meditations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_average" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>